# Fine-tune-Seq2Seq-LLM

./: .gitignore  bart-pho.ipynb  llm_llama3_train.ipynb  process_dataset.ipynb  pyproject.toml  results.txt  visule.ipynb
parquet-datasets/: valid.parquet
utils/: find_best_lr.ipynb
